---
title: Sarh — Logical ERD (full schema with PK / FK / UQ markers)
---
erDiagram
    auth_users          ||--o| officers              : "auth_user_id"
    auth_users          ||--o{ audit_log             : "actor"
    auth_users          ||--o{ id_issuance_history   : "issued_by"

    citizens            ||--o{ properties            : "owner"
    citizens            ||--o{ digital_id_cards      : "holder"
    citizens            ||--o{ id_issuance_history   : "subject"
    citizens            ||--o{ ssi_wallets           : "controls"
    citizens            ||--o{ notifications         : "recipient"
    citizens            ||--o{ registration_requests : "submitter"
    citizens            ||--o{ ownership_history     : "from"
    citizens            ||--o{ ownership_history     : "to"

    officers            ||--o{ properties            : "reviewer"
    officers            ||--o{ properties            : "manager_approver"
    officers            ||--o{ digital_id_cards      : "issuer"
    officers            ||--o{ property_nfts         : "minter"
    officers            ||--o{ review_comments       : "author"
    officers            ||--o{ property_disputes     : "recorder"

    regions             ||--o{ citizens              : "scope"
    regions             ||--o{ officers              : "scope"
    regions             ||--o{ properties            : "scope"
    regions             ||--o{ municipalities        : "parent"
    regions             ||--o{ offices               : "located in"
    offices             ||--o{ digital_id_cards      : "printed at"

    properties          ||--o{ registration_requests : "request"
    properties          ||--o{ property_documents    : "attachments"
    properties          ||--o{ review_comments       : "comments"
    properties          ||--o{ property_disputes     : "encumbrances"
    properties          ||--o| property_nfts         : "tokenised"
    properties          ||--o{ ownership_history     : "chain"

    digital_id_cards    ||--|| nfc_card_secrets      : "secrets"
    digital_id_cards    ||--o{ id_issuance_history   : "events"

    ssi_wallets         ||--o{ ssi_credentials       : "issued"
    property_nfts       ||--o{ ownership_history     : "transfers"

    auth_users {
        UNIQUEIDENTIFIER id                  PK
        NVARCHAR         email               UK
        NVARCHAR         encrypted_password
        UNIQUEIDENTIFIER officer_id          FK,UK
        DATETIMEOFFSET   email_confirmed_at
        DATETIMEOFFSET   last_sign_in_at
        NVARCHAR_MAX     raw_app_meta_data   "JSON"
        NVARCHAR_MAX     raw_user_meta_data  "JSON"
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    citizens {
        UNIQUEIDENTIFIER id                  PK
        UNIQUEIDENTIFIER auth_user_id        FK
        NVARCHAR         first_name_ar
        NVARCHAR         father_name_ar
        NVARCHAR         grandfather_name_ar
        NVARCHAR         family_name_ar
        NVARCHAR         mother_name_ar
        NVARCHAR         legacy_national_no  UK
        NVARCHAR         family_book_no
        NVARCHAR         gender              "male/female"
        DATE             birth_date
        NVARCHAR         birth_place
        NVARCHAR         nationality
        NVARCHAR         marital_status
        NVARCHAR         phone               UK
        NVARCHAR         email               UK
        INT              region_id           FK
        INT              municipality_id     FK
        NVARCHAR         address_ar
        BIT              is_active
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    officers {
        UNIQUEIDENTIFIER id                  PK
        UNIQUEIDENTIFIER auth_user_id        FK,UK
        NVARCHAR         employee_no         UK
        NVARCHAR         full_name_ar
        NVARCHAR         full_name_en
        NVARCHAR         role                "super_admin/registry_officer/reviewer/auditor/id_issuer/department_manager"
        INT              region_id           FK
        INT              municipality_id     FK
        NVARCHAR         email
        NVARCHAR_MAX     permissions         "JSON"
        BIT              is_active
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    regions {
        INT              id                  PK
        NVARCHAR         code                UK
        NVARCHAR         name_ar
        NVARCHAR         name_en
    }

    municipalities {
        INT              id                  PK
        INT              region_id           FK
        NVARCHAR         name_ar
        NVARCHAR         name_en
    }

    properties {
        UNIQUEIDENTIFIER id                       PK
        NVARCHAR         property_code            UK
        NVARCHAR         parcel_number
        NVARCHAR         plan_number
        NVARCHAR         block_number
        UNIQUEIDENTIFIER owner_citizen_id         FK
        NVARCHAR         property_type            "residential/agricultural/commercial/governmental/industrial/mixed"
        INT              region_id                FK
        INT              municipality_id          FK
        NVARCHAR         address_ar
        GEOGRAPHY        location_point
        GEOGRAPHY        boundary_polygon
        DECIMAL          area_sqm                 "computed STArea()"
        DECIMAL          documented_area_sqm      "area per paper deed"
        NVARCHAR         status                   "draft/pending/under_review/approved/rejected/minted/transferred/frozen"
        DATETIMEOFFSET   submitted_at
        DATETIMEOFFSET   reviewed_at
        UNIQUEIDENTIFIER reviewed_by_officer_id   FK
        UNIQUEIDENTIFIER approved_by_manager_id   FK
        DATETIMEOFFSET   final_approved_at
        NVARCHAR         approval_decree_no
        NVARCHAR         volume_number            "old paper register"
        NVARCHAR         page_number              "old paper register"
        NVARCHAR         deed_pdf_path
        CHAR             deed_signed_hash
        NVARCHAR         vc_credential_id
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    registration_requests {
        UNIQUEIDENTIFIER id                          PK
        UNIQUEIDENTIFIER property_id                 FK
        NVARCHAR         request_no                  UK
        UNIQUEIDENTIFIER submitted_by_citizen_id     FK
        DATETIMEOFFSET   submitted_at
        NVARCHAR         current_status              "pending/under_review/needs_clarification/approved/rejected"
        NVARCHAR_MAX     notes
    }

    review_comments {
        UNIQUEIDENTIFIER id           PK
        UNIQUEIDENTIFIER property_id  FK
        UNIQUEIDENTIFIER officer_id   FK
        UNIQUEIDENTIFIER citizen_id   FK
        NVARCHAR_MAX     body
        BIT              is_internal
        DATETIMEOFFSET   created_at
    }

    property_documents {
        UNIQUEIDENTIFIER id            PK
        UNIQUEIDENTIFIER property_id   FK
        NVARCHAR         doc_type
        NVARCHAR         storage_path
        CHAR             sha256
        DATETIMEOFFSET   uploaded_at
    }

    digital_id_cards {
        UNIQUEIDENTIFIER id                       PK
        UNIQUEIDENTIFIER citizen_id               FK
        NVARCHAR         digital_id_number        UK
        NVARCHAR         card_serial              UK
        NVARCHAR         nfc_uid                  UK
        BIGINT           last_nfc_counter         "rolling"
        DATETIMEOFFSET   last_nfc_tap_at
        NVARCHAR         did                      UK
        NVARCHAR_MAX     did_doc                  "JSON"
        NVARCHAR         wallet_endpoint
        UNIQUEIDENTIFIER issued_by_officer_id     FK
        INT              issued_at_office_id      FK
        DATETIMEOFFSET   issued_at
        DATETIMEOFFSET   expires_at
        NVARCHAR         status                   "active/frozen/lost/expired/revoked"
        DATETIMEOFFSET   revoked_at
        NVARCHAR_MAX     revoked_reason
        CHAR             photo_hash
        CHAR             data_hash
    }

    nfc_card_secrets {
        UNIQUEIDENTIFIER id                       PK
        UNIQUEIDENTIFIER card_id                  FK,UK
        VARBINARY        meta_read_key_enc
        VARBINARY        sdm_file_read_key_enc
        NVARCHAR         kms_key_id
    }

    id_issuance_history {
        UNIQUEIDENTIFIER id           PK
        UNIQUEIDENTIFIER citizen_id   FK
        UNIQUEIDENTIFIER card_id      FK
        NVARCHAR         action       "issue/reissue/revoke"
        NVARCHAR_MAX     reason
        UNIQUEIDENTIFIER officer_id   FK
        DATETIMEOFFSET   occurred_at
    }

    ssi_wallets {
        UNIQUEIDENTIFIER id           PK
        UNIQUEIDENTIFIER citizen_id   FK
        NVARCHAR         did          UK
        NVARCHAR_MAX     did_doc      "JSON"
        DATETIMEOFFSET   created_at
    }

    ssi_credentials {
        UNIQUEIDENTIFIER id              PK
        UNIQUEIDENTIFIER wallet_id       FK
        NVARCHAR         credential_type "PropertyDeed/CitizenIdentity"
        NVARCHAR         subject_id
        NVARCHAR_MAX     cred_data       "JSON"
        DATETIMEOFFSET   issued_at
    }

    notifications {
        UNIQUEIDENTIFIER id                   PK
        UNIQUEIDENTIFIER recipient_citizen_id FK
        UNIQUEIDENTIFIER recipient_officer_id FK
        NVARCHAR         kind                 "sms/push/email/in_app"
        NVARCHAR         title_ar
        NVARCHAR_MAX     body_ar
        NVARCHAR_MAX     payload              "JSON"
        DATETIMEOFFSET   sent_at
        DATETIMEOFFSET   read_at
        NVARCHAR         delivery_status
    }

    audit_log {
        BIGINT           id              PK "IDENTITY"
        UNIQUEIDENTIFIER actor_user_id   FK
        NVARCHAR         action
        NVARCHAR         entity
        UNIQUEIDENTIFIER entity_id
        NVARCHAR_MAX     before_state    "JSON"
        NVARCHAR_MAX     after_state     "JSON"
        DATETIMEOFFSET   occurred_at
    }

    property_nfts {
        UNIQUEIDENTIFIER id                       PK
        UNIQUEIDENTIFIER property_id              FK
        NVARCHAR         token_id
        NVARCHAR         contract_address
        NVARCHAR         network                  "ethereum-sepolia/polygon-amoy/hyperledger-fabric"
        NVARCHAR         standard                 "ERC-721/ERC-1155/chaincode"
        NVARCHAR         owner_did
        NVARCHAR         owner_address
        NVARCHAR         metadata_uri             "ipfs://… or https://"
        CHAR             metadata_sha256
        NVARCHAR         mint_tx_hash
        BIGINT           mint_block_number
        UNIQUEIDENTIFIER minted_by_officer_id     FK
        DATETIMEOFFSET   minted_at
        NVARCHAR         status                   "pending/minted/transferred/burned/failed"
        DATETIMEOFFSET   last_reconciled_at
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    ownership_history {
        UNIQUEIDENTIFIER id                       PK
        UNIQUEIDENTIFIER property_id              FK
        UNIQUEIDENTIFIER nft_id                   FK
        NVARCHAR         from_did                 "null on initial mint"
        NVARCHAR         to_did
        UNIQUEIDENTIFIER from_citizen_id          FK
        UNIQUEIDENTIFIER to_citizen_id            FK
        NVARCHAR         transfer_tx_hash
        BIGINT           transfer_block_number
        NVARCHAR         reason                   "initial_mint/sale/inheritance/gift/court_order/correction"
        NVARCHAR_MAX     notes_ar
        UNIQUEIDENTIFIER recorded_by_officer_id   FK
        DATETIMEOFFSET   transferred_at
        DATETIMEOFFSET   created_at
    }

    property_disputes {
        UNIQUEIDENTIFIER id                       PK
        UNIQUEIDENTIFIER property_id              FK
        NVARCHAR         dispute_type             "judicial_seizure/certified_mortgage/inheritance_dispute/waqf/precautionary_seizure/other"
        NVARCHAR         case_number
        NVARCHAR         issuing_authority
        DATE             start_date
        DATE             end_date
        NVARCHAR         status                   "active/lifted"
        NVARCHAR_MAX     notes
        UNIQUEIDENTIFIER recorded_by_officer_id   FK
        UNIQUEIDENTIFIER lifted_by_officer_id     FK
        DATETIMEOFFSET   lifted_at
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }

    offices {
        INT              id                  PK "IDENTITY"
        NVARCHAR         code                UK
        NVARCHAR         name_ar
        NVARCHAR         name_en
        NVARCHAR         office_type         "registry/id_issuance/headquarters/mixed"
        INT              region_id           FK
        INT              municipality_id     FK
        NVARCHAR         address_ar
        BIT              is_active
        DATETIMEOFFSET   created_at
        DATETIMEOFFSET   updated_at
    }
